# doc2txt

./: .gitignore  README.md  doc2txt.ipynb  dummy.docx  dummy.epub  epub2txt.ipynb  pdf2txt.ipynb  pyproject.toml  requirements.txt  usage.ipynb  uti.py
