[tool.poetry]
name = "doc2txt"
version = "0.1.0"
description = ""
authors = ["Kelvin Ng <hoishing@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
ebooklib = "^0.18"
ipykernel = "^6.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
