[tool.poetry]
name = "doc2txt"
version = "0.1.0"
description = ""
authors = ["Kelvin Ng <hoishing@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
pypdf = "^3.8.1"
ebooklib = "^0.18"
ipykernel = "^6.23.0"
beautifulsoup4 = "^4.12.2"
docx2txt = "^0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
